=== Version 0.2.1 / 2011-07-29
* Enhancements
  * Added ability to locate div by the contained text
  * Added #attach_to_window so a page object and operate on another window
  * Added #send_keys to PageObject::Elements::Element
  * Added #refresh to page object
  * Updated to use selenium-webdriver 2.2.0
  * Updated to use watir-webdriver 0.2.8

=== Version 0.2 / 2011-07-24
* Enhancements
  * Async handling
    * Added #wait_until to page object to support async events at page level
    * Added the following methods to PageObject::Elements::Element
      * #when_present
      * #when_visible
      * #when_not_visible
      * #wait_until
  * Handling popups
    * Added #alert to page object to override default alert popup behavior
    * Added #confirm to page object to override default confirm popup behavior
    * Added #prompt to page object to override default prompt popup behavior
  * Updated to use selenium-webdriver 2.1.0

=== Version 0.1.1 / 2011-07-16
* Enhancements
  * Support for identifying hidden fields by text when using Selenium
  * Support for identifying links by href when using Selenium
  * Updated to use selenium-webdriver 2.0.1
  * Updated to use watir-webdriver 0.2.6

=== Version 0.1 / 2011-07-01
* Enhancements
  * Support for using multiple identifiers when locating the following element:
    * Link
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * CheckBox
    * RadioButton
    * Button
    * Div
    * Span
    * Table
    * TableCell
    * Image
    * Form
    * ListItem
    * UnorderedList
    * OrderedList
  * Selenium support for using index for the following elements:
    * Link
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * CheckBox
    * RadioButton
    * Button
    * Div
    * Span
    * Table
    * Image
    * Form
    * ListItem
    * UnorderedList
    * OrderedList
  * Support name for identification across all elements in Watir
  * Added [] method to SelectList to index Options