@@ -1,0 +1,12 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+    <head>
+        <title>Iframes</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
+    <body>
+        <h1>Iframes</h1>
+        <iframe src="frame_1.html" id="frame_1" name="frame1" class="iframe"></iframe>
+        <iframe src="frame_2.html" id="frame_2" name="frame2" class="iframe"></iframe>
+    </body>
+</html>
