@@ -95,6 +95,13 @@ describe PageObject do
         watir_page_object.attach_to_window(:url => "success.html")
       end
       
+      it "should switch to a new frame by index" do
+        watir_browser.should_receive(:wd).and_return(watir_browser)
+        watir_browser.should_receive(:switch_to).and_return(watir_browser)
+        watir_browser.should_receive(:frame).with(0)
+        watir_page_object.switch_to_frame(0)
+      end
+      
       it "should refresh the page contents" do
         watir_browser.should_receive(:refresh)
         watir_page_object.refresh
@@ -160,6 +167,12 @@ describe PageObject do
         selenium_browser.should_receive(:window).with("win1").and_return(selenium_browser)
         selenium_browser.should_receive(:current_url).and_return("page.html")
         selenium_page_object.attach_to_window(:url => "page.html")
+      end
+      
+      it "should switch to a new frame by index" do
+        selenium_browser.should_receive(:switch_to).and_return(selenium_browser)
+        selenium_browser.should_receive(:frame).with(0)
+        selenium_page_object.switch_to_frame(0)
       end
 
       it "should refresh the page contents" do
